# Elka.VoiceMeeterFxHost

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: BuildInstructions.md  Publishing.md  RealtimeCoreIsolation.md  VisualStudioRun.md
scripts/: publish-release.ps1  upload-release-assets.ps1
src/app-wpf/: Elka.VoiceMeeterFxHost.App.csproj  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  PluginGroupPropertiesWindow.cs  PluginNodePropertiesWindow.cs  PluginProbeGuard.cs  PluginWorkerLocator.cs  Program.cs  SinglePingWindow.xaml  SinglePingWindow.xaml.cs
src/app-wpf/Properties/PublishProfiles/: win-x64-framework-dependent.pubxml
src/engine/: RealtimeEngine.cpp  RealtimeEngine.h
src/insert_asio/: InsertAsioHost.h
src/native_api/: FxHostNativeApi.cpp
src/plugin-worker/: Program.cs
src/plugins/: PluginHostLayer.cpp  PluginHostLayer.h
src/realtime_core_api/: RealtimeCoreNativeApi.cpp
src/voicemeeter/: VoicemeeterClient.cpp  VoicemeeterClient.h  VoicemeeterRemoteApi.cpp  VoicemeeterRemoteApi.h
tools/CallbackNullHost/: CMakeLists.txt  CallbackNullHost.cpp  README.md
